<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_machine">
        <ListPreference
            android:key="machine"
            android:title="@string/settings_default_machine"
            android:summary="@string/settings_default_machine_summary"
            android:defaultValue="128" />
        <SwitchPreference
            android:key="issue2"
            android:title="@string/settings_issue2"
            android:summary="@string/settings_issue2_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_storage">
        <Preference
            android:key="statesRoot"
            android:title="@string/settings_data_folder"
            android:summary="@string/settings_data_folder_summary" />
        <Preference
            android:key="contentTree"
            android:title="@string/settings_content_folder"
            android:summary="@string/settings_content_folder_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_states">
        <ListPreference
            android:key="snapshotFormat"
            android:title="@string/settings_snapshot_format"
            android:entries="@array/format_names"
            android:entryValues="@array/format_values"
            android:defaultValue="szx" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_tape">
        <ListPreference
            android:key="loaderAcceleration"
            android:title="@string/settings_loader"
            android:entries="@array/loader_names"
            android:entryValues="@array/loader_values"
            android:defaultValue="turbo" />
        <SwitchPreference
            android:key="detectLoader"
            android:title="@string/settings_detect_loader"
            android:summary="@string/settings_detect_loader_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="tapeSound"
            android:title="@string/settings_tape_sound"
            android:summary="@string/settings_tape_sound_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="autoLoad"
            android:title="@string/settings_autoload"
            android:summary="@string/settings_autoload_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_sound">
        <SwitchPreference
            android:key="sound"
            android:title="@string/settings_sound_enabled"
            android:defaultValue="true" />
        <ListPreference
            android:key="volumeAy"
            android:title="@string/settings_volume_ay"
            android:entries="@array/volume_names"
            android:entryValues="@array/volume_values"
            android:defaultValue="100"
            android:dependency="sound" />
        <ListPreference
            android:key="ayStereo"
            android:title="@string/settings_ay_stereo"
            android:entries="@array/ay_stereo_names"
            android:entryValues="@array/ay_stereo_values"
            android:defaultValue="None"
            android:dependency="sound" />
        <ListPreference
            android:key="volumeBeeper"
            android:title="@string/settings_volume_beeper"
            android:entries="@array/volume_names"
            android:entryValues="@array/volume_values"
            android:defaultValue="100"
            android:dependency="sound" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_filter">
        <SwitchPreference
            android:key="scanlines"
            android:title="@string/settings_scanlines"
            android:summary="@string/settings_scanlines_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="filterScanline"
            android:title="@string/settings_filter_scanline"
            android:entries="@array/percent_names"
            android:entryValues="@array/percent_values"
            android:defaultValue="50"
            android:dependency="scanlines" />

        <SwitchPreference
            android:key="crt"
            android:title="@string/settings_crt"
            android:summary="@string/settings_crt_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="filterCurve"
            android:title="@string/settings_filter_curve"
            android:entries="@array/percent_names"
            android:entryValues="@array/percent_values"
            android:defaultValue="40"
            android:dependency="crt" />
        <ListPreference
            android:key="filterMask"
            android:title="@string/settings_filter_mask"
            android:entries="@array/percent_names"
            android:entryValues="@array/percent_values"
            android:defaultValue="40"
            android:dependency="crt" />
        <ListPreference
            android:key="filterGlow"
            android:title="@string/settings_filter_glow"
            android:entries="@array/percent_names"
            android:entryValues="@array/percent_values"
            android:defaultValue="30"
            android:dependency="crt" />

        <ListPreference
            android:key="filterSharpness"
            android:title="@string/settings_filter_sharpness"
            android:summary="@string/settings_filter_sharpness_summary"
            android:entries="@array/percent_names"
            android:entryValues="@array/percent_values"
            android:defaultValue="100" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_display">
        <ListPreference
            android:key="landscapeLayout"
            android:title="@string/settings_landscape_layout"
            android:summary="@string/settings_landscape_layout_summary"
            android:entries="@array/layout_names"
            android:entryValues="@array/layout_values"
            android:defaultValue="below" />
        <SwitchPreference
            android:key="indicators"
            android:title="@string/settings_indicators"
            android:summary="@string/settings_indicators_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="bwTv"
            android:title="@string/settings_bw_tv"
            android:summary="@string/settings_bw_tv_summary"
            android:defaultValue="false" />
        <SwitchPreference
            android:key="keepScreenOn"
            android:title="@string/settings_keep_screen_on"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_emulation">
        <ListPreference
            android:key="speed"
            android:title="@string/settings_speed"
            android:entries="@array/speed_names"
            android:entryValues="@array/speed_values"
            android:defaultValue="100" />
    </PreferenceCategory>

</PreferenceScreen>
