<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- One row says what the picture looks like; the eight numbers behind it
         are for the one person in a hundred who wants to tune a shadow mask.
         It was ten rows here, interleaved, and the border was below all of
         them. See Filter.java. -->
    <PreferenceCategory android:title="@string/settings_filter">
        <ListPreference
            android:key="filter"
            android:title="@string/settings_filter_choice"
            android:entries="@array/filter_names"
            android:entryValues="@array/filter_values"
            android:defaultValue="off" />
        <SwitchPreference
            android:key="bwTv"
            android:title="@string/settings_bw_tv"
            android:summary="@string/settings_bw_tv_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="border"
            android:title="@string/settings_border"
            android:entries="@array/border_names"
            android:entryValues="@array/border_values"
            android:defaultValue="full" />

        <PreferenceScreen
            android:key="filterAdvanced"
            android:title="@string/settings_filter_advanced"
            android:summary="@string/settings_filter_advanced_summary">

            <PreferenceCategory android:title="@string/settings_filter_beam">
            <ListPreference
                android:key="filterScanline"
                android:title="@string/settings_filter_scanline"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="50" />
    </PreferenceCategory>

            <PreferenceCategory android:title="@string/settings_filter_glass">
            <ListPreference
                android:key="filterCurve"
                android:title="@string/settings_filter_curve"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="40" />
            <ListPreference
                android:key="filterMask"
                android:title="@string/settings_filter_mask"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="40" />
            <ListPreference
                android:key="filterGlow"
                android:title="@string/settings_filter_glow"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="30" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/settings_filter_signal">
            <ListPreference
                android:key="video"
                android:title="@string/settings_video"
                android:summary="@string/settings_video_summary"
                android:entries="@array/video_names"
                android:entryValues="@array/video_values"
                android:defaultValue="0" />
            <ListPreference
                android:key="filterBleed"
                android:title="@string/settings_filter_bleed"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="50" />
            <ListPreference
                android:key="filterNoise"
                android:title="@string/settings_filter_noise"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="20" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/settings_filter_scaling">
            <ListPreference
                android:key="filterSharpness"
                android:title="@string/settings_filter_sharpness"
                android:summary="@string/settings_filter_sharpness_summary"
                android:entries="@array/percent_names"
                android:entryValues="@array/percent_values"
                android:defaultValue="100" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_display">
        <ListPreference
            android:key="scalePortrait"
            android:title="@string/settings_scale_portrait"
            android:summary="@string/settings_scale_summary"
            android:defaultValue="0" />
        <ListPreference
            android:key="scaleLandscape"
            android:title="@string/settings_scale_landscape"
            android:summary="@string/settings_scale_summary"
            android:defaultValue="0" />
        <SwitchPreference
            android:key="indicators"
            android:title="@string/settings_indicators"
            android:summary="@string/settings_indicators_summary"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="keepBar"
            android:title="@string/settings_keep_bar"
            android:summary="@string/settings_keep_bar_summary"
            android:defaultValue="false" />
        <SwitchPreference
            android:key="secondScreen"
            android:title="@string/settings_second_screen"
            android:summary="@string/settings_second_screen_summary"
            android:defaultValue="false" />
        <SwitchPreference
            android:key="keepScreenOn"
            android:title="@string/settings_keep_screen_on"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
